# tetris-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: grid.rs  main.rs  parameters.rs  state.rs
src/game/: mod.rs
src/game_info/: mod.rs
src/grid/: mod.rs
src/next/: mod.rs
src/score/: mod.rs
src/tetromino/: mod.rs
src/ui/: mod.rs
