[package]
name = "tetris-rs"
version = "0.1.8"
edition = "2024"

[dependencies]
macroquad = "0.4"

[profile.release]
opt-level = 3         # Optimize for size ("3" for speed, "z" for smallest binary)
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Better optimizations, slower compile
panic = "abort"         # Smaller binary, no stack unwinding
strip = true            # Remove debug symbols (Rust 1.60+)
